editted diag diff test